# VoiceTranslator

./: .gitignore  CLAUDE.md  Claude.md  LICENSE.md  README.md  preClaude.md  pyproject.toml  setup_all_gpu.bat
.claude/agents/: designReviewer.md  reviewer.md  worker.md
.claude/commands/: jisou.md
claudeKnowledge/: README.md
claudeKnowledge/designReviewer/: memory.md
claudeKnowledge/reviewer/: memory.md
claudeKnowledge/worker/: memory.md
docs/: manual.md  runnerManual.md
docs/appendix/: securityReport260610.md
docs/design/: AgenticWorkflow.html  AgenticWorkflow.md  Architecture.html  Architecture.md  Class.md  ErrorCatalog.md  TaskList.md  UserSinario.md  pendList.md  prePlan.md
docs/design/append/: AppControllerResponsibilities(MVVM).html  AppControllerResponsibilities.html  MvcVsMvvm.html  backendCandidates.html  compositeBackendCandidates.html  計測区間の整理.html
docs/design/bugfix-process-enumerator-empty-list/: Plan.md  testPlan.md
docs/design/done/: setup_all_cpu.bat  やりたいこと.txt
docs/design/feature-asr-lang-support/: Plan.md  testPlan.md
docs/design/feature-asr-picks/: Plan.md  testPlan.md  verify.md
docs/design/feature-backend-availability/: testPlan.md
docs/design/feature-backend-mgmt/: Plan.md  backendCandidates.html  knownRisks.md  knownRisks2.md  prePlan.md
docs/design/feature-capture-backend-split/: Plan.md  testPlan.md
docs/design/feature-capture-kind/: testPlan.md
docs/design/feature-dev-runners-and-dump/: Plan.md
docs/design/feature-dropped-utterance-handling/: testPlan.md
docs/design/feature-dynamic-languages/: testPlan.md
docs/design/feature-individual-text-logs/: Plan.md
docs/design/feature-lazy-load-auth-gate/: Plan.md  testPlan.md
docs/design/feature-mms-multilingual/: Plan.md  gen_lang_table.py  レビュー指摘.md
docs/design/feature-phase01-mvp/: Plan.md  testPlan.md
docs/design/feature-proctap-backend/: Plan.md
docs/design/feature-proctap-process-list/: Plan.md
docs/design/feature-runtime-flex-and-input/: Plan.md
docs/design/feature-text-only-output/: testPlan.md
docs/design/feature-translation-quality-step1/: Plan.md  testPlan.md
docs/design/feature-translator-lang-support/: Plan.md
docs/design/feature-translator-picks/: Plan.md  verify.md
docs/design/feature-tts-lang-support/: Plan.md
docs/design/feature-tts-picks/: Plan.md  testPlan.md  verify.md
docs/design/feature-ui-i18n-foundation/: Plan.md  testPlan.md  レビュー指摘.md
docs/design/feature-ui-sections-split/: Plan.md
docs/design/feature-vad-picks-phase-f1/: testPlan.md
docs/design/refactor-backend-dialog-auto-load-cleanup/: Plan.md  checkedRequest.md  designReview.md
docs/design/refactor-backend-settings-button-disable-when-empty/: designReview.md  finalReview.md  request.md
docs/design/refactor-mvvm/: Roadmap.md
docs/design/refactor-pipeline-5thread/: Plan.md  testPlan.md
docs/design/refactor-pipeline-composite-backend/: Plan.md  testPlan.md
docs/design/refactor-roles-rebalance/: Plan.md
docs/design/refactor-ui-3move/: Roadmap.md  behavioral-contract.md
docs/forRunner/: runnerManual.md  testscript.txt
docs/forRunner/testData/: run.json  seq_0001_asr.json  seq_0001_translate.json
docs/troubleAndShooting/: 2026-05-30_pyannote_audio_4x_migration.md
src/voice_translator/: __init__.py  __main__.py
src/voice_translator/asr/: __init__.py  backend.py  deepgram_backend.py  faster_whisper_backend.py  faster_whisper_translate_backend.py  google_stt_backend.py  gpt_audio_translate_backend.py  openai_whisper_api_backend.py  openai_whisper_api_translate_backend.py  openai_whisper_backend.py
src/voice_translator/capture/: __init__.py  backend.py  process_enumerator.py  proctap_backend.py  soundcard_backend.py
src/voice_translator/common/: __init__.py  app_controller.py  backend_base.py  backend_catalog.py  backend_registry.py  backend_setup.py  bounded_queue.py  cache_check.py  config_store.py  credentials.py  credentials_service.py  device.py  device_validator.py  error_handler.py  errors.py  hw_info.py  languages.py  ledger.py  logger.py  messages.py  notification_throttle.py  pipeline.py  pipeline_plan.py  process_time_logger.py  sequence.py  stage_dump.py  types.py  utterance.py  whisper_languages.py
src/voice_translator/dev/: __init__.py  _common.py  runner_asr.py  runner_output.py  runner_pipeline.py  runner_proc_list.py  runner_translator.py  runner_tts.py  runner_vad.py
src/voice_translator/gui/: __init__.py  collapsible_section.py  consent_dialog.py  control_panel.py  credential_dialog.py  i18n.py  language_select_dialog.py  layer_settings_dialog.py  layer_settings_schema.py  main_window.py  notification_banner.py  process_select_dialog.py  settings_panel.py
src/voice_translator/output/: __init__.py  backend.py  soundcard_backend.py
src/voice_translator/translator/: __init__.py  anthropic_claude_backend.py  backend.py  deepl_backend.py  nllb200_backend.py  openai_gpt_backend.py
src/voice_translator/tts/: __init__.py  backend.py  elevenlabs_backend.py  google_cloud_tts_backend.py  mms_backend.py  openai_tts_backend.py  piper_backend.py  (+1 more)
tests/: _fixtures.py  conftest.py  test_anthropic_claude.py  test_anthropic_claude_large.py  test_app_controller.py  test_backend_base.py  test_backend_catalog.py  test_backend_registry.py  test_backend_setup.py  test_bounded_queue.py  test_cache_check.py  test_capture_backend_split.py  test_capture_kind.py  test_capture_process_source_lifecycle.py  test_collapsible_section.py  test_composite_absorption.py  test_composite_cloud_backends.py  test_config_store.py  test_control_panel_test_output.py  test_credential_field_file.py  test_credential_flow.py  test_credentials.py  test_credentials_service.py  test_deepgram.py  test_deepgram_large.py  test_deepl.py  test_deepl_large.py  test_dev_common.py  test_device.py  test_device_validator.py  test_dynamic_devices.py  test_dynamic_languages.py  test_elevenlabs_tts.py  test_elevenlabs_tts_large.py  test_errors.py  test_faster_whisper.py  test_google_cloud_tts.py  test_google_cloud_tts_large.py  test_google_stt.py  test_google_stt_large.py  (+79 more)
(+57 files in other folders)
