[project]
name = "voice-translator"
version = "0.1.0"
description = "ローカルで動作する音声翻訳アプリ(MVP: Windows)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "soundcard>=0.4",
    # ML系バックエンド(Step 4):
    "silero-vad>=5.1",
    "faster-whisper>=1.0",
    "transformers>=4.40",
    "torch>=2.2",
    "sentencepiece>=0.2",
    "pyttsx3>=2.90",
    # GUI(Step 5):
    "customtkinter>=5.2",
]

# 配布方針: CPU を floor、GPU は opt-in(CLAUDE.md「配布方針」参照)。
# - `uv sync --extra cpu`  : PyPI の CPU 専用 torch を取得(誰でも動く)
# - `uv sync --extra cuda` : NVIDIA CUDA 12.1 wheels の torch を取得(GPU 高速)
# - extras を指定しない素の `uv sync` は意図が曖昧なので避ける(どちらかを必ず付ける)
#
# 互いに排他なため `[tool.uv].conflicts` で uv に明示する。これがないと universal
# resolution が両方を満たそうとして CUDA 版に倒れる("uv sync"だけで GPU 版が入る)。
[project.optional-dependencies]
cpu = [
    "torch>=2.2",
]
cuda = [
    "torch>=2.2",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
# PyTorch の CPU 専用ビルド。--extra cpu のときだけ参照される。
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
# PyTorch の CUDA 12.1 ビルド。--extra cuda のときだけ参照される。
# CUDA バージョンを上げたい場合はここの URL を `cu124` 等に変える。
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Google "small / middle / large" のテストピラミッドに沿うマーカー。
# - small: 既定(マーカー無し)。高速 / モック中心 / 毎回回す。
# - middle: 実コンポーネントだが軽め。リリース前/機能更新時に確認したい統合的なもの。
# - large : 実モデル/実デバイス必須で重い(数十秒〜数分)。手動で明示実行のみ。
markers = [
    "middle: middle-size integration tests (real local components, moderate cost)",
    "large: large/end-to-end tests requiring real models or audio devices (manual only)",
]
# 既定では middle / large を除外する。リリース前は `-m middle` / `-m large` /
# `-m \"middle or large\"` を明示して回す。
addopts = "-ra -m 'not middle and not large'"
