[project]
name = "voice-translator"
version = "0.1.0"
description = "ローカルで動作する音声翻訳アプリ(MVP: Windows)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "soundcard>=0.4",
    # ML系バックエンド(Step 4):
    "silero-vad>=5.1",
    "faster-whisper>=1.0",
    "transformers>=4.40",
    # pyannote.audio 4.x が torch>=2.8.0 / torchaudio>=2.8.0 を要求するため、それに合わせて
    # 下限を 2.8 に引き上げ(cu126 index に対応)。pyannote を使わなくても torch 2.8 は問題なく動く。
    "torch>=2.8",
    "sentencepiece>=0.2",
    "pyttsx3>=2.90",
    # GUI(Step 5):
    "customtkinter>=5.2",
    # クラウド backend 認証情報の OS keychain 保管(Phase D):
    # 失敗時は平文ファイル(`local.secrets`)に fallback するので、未インストール環境でも
    # ローカル backend だけならアプリは動く。
    "keyring>=24.0",
]

# 配布方針: CPU を floor、GPU は opt-in(CLAUDE.md「配布方針」参照)。
# - `uv sync --extra cpu`  : PyPI の CPU 専用 torch を取得(誰でも動く)
# - `uv sync --extra cuda` : NVIDIA CUDA 12.1 wheels の torch を取得(GPU 高速)
# - extras を指定しない素の `uv sync` は意図が曖昧なので避ける(どちらかを必ず付ける)
#
# 互いに排他なため `[tool.uv].conflicts` で uv に明示する。これがないと universal
# resolution が両方を満たそうとして CUDA 版に倒れる("uv sync"だけで GPU 版が入る)。
#
# torchaudio は torch と **同じ index から同じバージョン系列で取る** こと(silero-vad が
# 依存)。デフォルト PyPI から取ると torch と ABI が合わず WinError 127 になる。
[project.optional-dependencies]
cpu = [
    "torch>=2.8",
    "torchaudio>=2.8",
]
cuda = [
    "torch>=2.8",
    "torchaudio>=2.8",
]
# Phase F1: 追加の VAD バックエンド(webrtcvad / pyannote.audio / pvcobra)。
# 配布方針 "CPU を floor、誰でも持っていける" を維持するため、既定の `uv sync --extra cpu`
# では入れない。利用したいユーザだけ `uv sync --extra cpu --extra vad-extra` で追加する。
# 各 backend は遅延 import を行い、依存未インストール時は FatalError を投げる。
# pyannote.audio は 4.x を採用(3.x は huggingface_hub の use_auth_token 廃止に追従しておらず、
# torch 2.6+ の weights_only 既定変更とも噛み合わずに長く保守不能になるため)。4.x で
# token kwarg / 新 hf_hub / 新 checkpoint 形式に切り替わっている。
vad-extra = [
    "webrtcvad-wheels>=2.0.10",
    "pyannote.audio>=4.0",
    "pvcobra>=2.0",
]
# Phase F2: 追加の ASR バックエンド。配布方針上、MVP の faster-whisper を
# floor とし、別実装が欲しいユーザだけ extras で追加できる構成にする。
# openai-whisper(公式)は PyTorch 直で重め。faster-whisper と並走する比較対象として用意。
asr-whisper-official = [
    "openai-whisper>=20240930",
]
# OpenAI Whisper API(クラウド)。HTTP クライアントを別 extras に切り出し、
# 後続のクラウド backend(DeepL / Anthropic 等)から共有できるようにする。
asr-openai-api = [
    "httpx>=0.27",
]
# Google Cloud STT(クラウド)。サービスアカウント JSON 認証。
asr-google-stt = [
    "google-cloud-speech>=2.27",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
# PyTorch の CPU 専用ビルド。--extra cpu のときだけ参照される。
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
# PyTorch の CUDA 12.6 ビルド。--extra cuda のときだけ参照される。
# 履歴: cu121(torch 2.5.1 まで)→ cu124(torch 2.6 まで)→ cu126(torch 2.8 以降)。
# pyannote.audio 4.x が torchaudio>=2.8 を要求するため cu126 に移行。
# 必要なドライババージョン目安: cu124 -> 525+、cu126 -> 555+。
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Google "small / middle / large" のテストピラミッドに沿うマーカー。
# - small: 既定(マーカー無し)。高速 / モック中心 / 毎回回す。
# - middle: 実コンポーネントだが軽め。リリース前/機能更新時に確認したい統合的なもの。
# - large : 実モデル/実デバイス必須で重い(数十秒〜数分)。手動で明示実行のみ。
markers = [
    "middle: middle-size integration tests (real local components, moderate cost)",
    "large: large/end-to-end tests requiring real models or audio devices (manual only)",
]
# 既定では middle / large を除外する。リリース前は `-m middle` / `-m large` /
# `-m \"middle or large\"` を明示して回す。
addopts = "-ra -m 'not middle and not large'"
